# Syntetika-Studio

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  azure-pipelines.yml  header_file.txt  syntetika_script_autodoc.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml
.obs/: workflows.yml
Source/: ADSR.cpp  ADSR.h  ADSRDisplay.cpp  ADSRDisplay.h  AbletonLink.cpp  AbletonLink.h  Amplifier.cpp  Amplifier.h  Arpeggiator.cpp  Arpeggiator.h  ArrangementController.cpp  ArrangementController.h  AudioLevelToCV.cpp  AudioLevelToCV.h  AudioMeter.cpp  AudioMeter.h  AudioRouter.cpp  AudioRouter.h  AudioSend.cpp  AudioSend.h  AudioSplitter.cpp  AudioSplitter.h  AudioToCV.cpp  AudioToCV.h  AudioToPulse.cpp  AudioToPulse.h  AudioVisualizerModule.cpp  AudioVisualizerModule.h  Autotalent.cpp  Autotalent.h  BandVocoder.cpp  BandVocoder.h  BeatBloks.cpp  BeatBloks.h  Beats.cpp  Beats.h  BiquadFilter.cpp  BiquadFilter.h  BiquadFilterEffect.cpp  BiquadFilterEffect.h  (+724 more)
Source/CFMessaging/: KontrolKommunicator.cpp  KontrolKommunicator.h  ListenPort.cpp  ListenPort.h  NIMessage.cpp  NIMessage.h  SendPort.cpp  SendPort.h
Source/cmake/: Syntetika.manifest.in  Syntetika.manifest.rc.in  bundle-python.cmake  lib.cmake  versiontools.cmake
autodoc/: autodoc.py  module_documentation.json
autodoc/syntetika.com/: index.html
autodoc/syntetika.com/docs/: index.html
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Syntetika.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build2/JUCE/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln  JUCEExportConfig.cmake  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
build2/JUCE/modules/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
build2/JUCE/tools/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln  JUCEExportConfig.cmake  JUCEToolsExport.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build2/Source/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Syntetika.vcxproj  Syntetika.vcxproj.filters  Syntetika_rc_lib.vcxproj  Syntetika_rc_lib.vcxproj.filters  cmake_install.cmake  code-quality-pipeline-checks.vcxproj  nightly-package.vcxproj  nightly-package.vcxproj.filters  version-info.vcxproj  version-info.vcxproj.filters
build2/Source/geninclude/: VersionInfo.cpp  VersionInfoBld.cpp
build2/libs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
build2/libs/exprtk/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ExprTk.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  exprtk.vcxproj  exprtk.vcxproj.filters
build2/libs/freeverb/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  freeverb.sln  freeverb.vcxproj  freeverb.vcxproj.filters
build2/libs/json/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  json.sln  json.vcxproj  json.vcxproj.filters
build2/libs/leathers/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  leathers.sln
build2/libs/nanosvg/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  nanosvg.sln
build2/libs/nanovg/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  nanovg.sln  nanovg.vcxproj  nanovg.vcxproj.filters
build2/libs/oddsound-mts/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  oddsound-mts.sln  oddsound-mts.vcxproj  oddsound-mts.vcxproj.filters
build2/libs/psmove/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  psmove.sln  psmove.vcxproj  psmove.vcxproj.filters
build2/libs/push2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  push2.sln  push2.vcxproj  push2.vcxproj.filters
build2/libs/pybind11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  (+1 more)
libs/: CMakeLists.txt
libs/freeverb/: CMakeLists.txt
libs/freeverb/freeverb/: tuning.h
libs/freeverb/src/: revmodel.cpp
libs/json/: CMakeLists.txt
libs/leathers/: CMakeLists.txt
libs/nanosvg/: CMakeLists.txt
libs/nanovg/: CMakeLists.txt
libs/psmove/: CMakeLists.txt  psmove.c
libs/push2/: CMakeLists.txt  Push2-Display.cpp  Push2-Display.h
libs/tinygltf/: CMakeLists.txt
libs/tinyobjloader/: CMakeLists.txt
libs/xwax/: CMakeLists.txt
libs/xwax/src/: timecoder.c
resource/: osc_support.txt  scripting_reference.txt  tooltips_deu.txt  tooltips_eng.txt  tooltips_esp.txt  tooltips_ru.txt  tooltips_tr.txt
resource/userdata_original/: scriptstyles.json
scripts/: build_release.ps1
scripts/installer_linux/: Syntetika.desktop  com.syntetika.Syntetika.metainfo.xml
scripts/installer_macOS/: build_dmg.sh  make_installer.sh  notarize.sh  post_notarization_staple.sh  syntetika_dmg.json
syntetika_windows_installer/: Syntetika.wxs  Synthetika.wxs  build_iexpress_installer.ps1  build_msi_installer.ps1  syntetika_installer_create.bat
(+157 files in other folders)
